--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
   transform: translateZ(-2px) scaleX(-1) translateX(100%);
-  background: url('your-image.jpg') no-repeat center center;
+  background: url('MixCollage-31-Jan-2025-12-05-AM-9674.jpg') no-repeat center center;
   background-size: cover; /* Ensures the image covers the entire background */
 
 }
