--- a/style.css
+++ b/style.css
@@ -14,13 +14,12 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  min-width: 1024px; /* Ensures desktop width */
-  min-height: 700px; /* Keeps a reasonable height */
+  /* min-width: 900px;
+  min-height: 700px; */
   background: linear-gradient(rgba(2, 29, 183, 0.963), rgb(146, 4, 96));
   position: relative;
-  overflow-x: hidden; /* Prevents horizontal scroll on mobile */
 }
 #botao1 {
   background: rgba(68, 166, 158, 0.406);
