--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-3px);
-  background: #f5f5f5;
+  background: #FFD1DC;
 }
 
 .left-side:nth-child(3) {
@@ -102,7 +102,7 @@ body {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-5px);
-  background: #f5f5f5;
+  background: #FFE5B4;
 }
 
 .left-side:nth-child(5) {
@@ -113,7 +113,7 @@ body {
   padding: 5% 5% 4% 4%;
   transform-origin: 100% 50%;
   transform: translatez(-6px) scalex(-1) translatex(100%);
-  background: #f5f5f5;
+  background: #FAE3D9;
 }
 
 .left-side:nth-child(6) {
@@ -124,7 +124,7 @@ body {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-7px);
-  background: #f5f5f5;
+  background: #FFE5B4;
 }
 
 .left-side:nth-child(7) {
@@ -146,7 +146,7 @@ body {
   padding: 5% 4% 4% 5%;
   transform-origin: 0% 50%;
   transform: translatez(-9px);
-  background: #f5f5f5;
+  background: #FFD1DC;
 }
 
 .left-side:nth-child(9) {
